# switch-automation

./: .gitignore  .gitmodules  README.md  System-changes.md  pyproject.toml  sync.err
.claude/: settings.local.json
scripts/: camera_debug.py  finalize_switch_bluetooth.sh  keyboard_control.py  pair_switch.py  pi_sync_bg.ps1  roi_picker.py  run_camera_loop.py  setup_switch_bluetooth.sh
sequences/: artikodin.json  electhor.json  sulfura.json
src/: cli.py
src/automation/: __init__.py  camera_loop.py  persistence.py  runner.py  sequence.py
src/control/: __init__.py  backend.py  nxbt_backend.py
src/shiny_hunter/: cli.py  config.py
src/shiny_hunter/automation/: runner.py
src/shiny_hunter/control/: backend.py  nxbt_backend.py
src/vision/: __init__.py  capture.py  detector.py  stream.py
systemd/: switch-bt-finalize.service  switch-bt-setup.service  switch-camera-loop.env.example  switch-camera-loop.service
