[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "switch-automation"
version = "0.1.0"
description = "Nintendo Switch automation from a Raspberry Pi using Bluetooth control and video feedback."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "vkindschi" }
]
dependencies = []

[project.scripts]
switch-automation = "cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["cli", "config"]

[tool.setuptools.packages.find]
where = ["src"]
